--- a/Arrastrar.html
+++ b/Arrastrar.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-left">Ética Profesional</div>
         <button class="menu-btn" onclick="window.location.href='index.html'">Menú</button>
-        <div class="header-right" id="timer">00:30</div>
+        <div class="header-right" id="timer">00:00</div>
     </header>
     <main>
         <h2>Arrastra la palabra correcta al concepto</h2>
@@ -24,7 +24,7 @@
 
         <!-- Múltiples conceptos -->
         <div class="concept-container" id="concept1" ondrop="drop(event, 'concept1')" ondragover="allowDrop(event)">
-            <p>Concepto de ética 1:</p>
+            <p>Implica que los profesionales deben ser claros y abiertos en sus comunicaciones, evitando ocultar información que pueda afectar a otros.</p>
             <p class="concept-text" id="concept-text1"></p>
         </div>
 
@@ -40,7 +40,7 @@
         </div>
 
         <div class="concept-container" id="concept2" ondrop="drop(event, 'concept2')" ondragover="allowDrop(event)">
-            <p>Concepto de ética 2:</p>
+            <p>Consiste en tomar decisiones justas y equitativas que consideren el bienestar de todas las partes involucradas.</p>
             <p class="concept-text" id="concept-text2"></p>
         </div>
 
@@ -56,7 +56,7 @@
         </div>
 
         <div class="concept-container" id="concept3" ondrop="drop(event, 'concept3')" ondragover="allowDrop(event)">
-            <p>Concepto de ética 3:</p>
+            <p>Significa adherirse a los códigos y normas establecidos en la profesión para actuar de manera correcta y profesional.</p>
             <p class="concept-text" id="concept-text3"></p>
         </div>
         
