--- a/Multiple.html
+++ b/Multiple.html
@@ -15,7 +15,7 @@
             <button class="menu-btn" onclick="window.location.href='index.html'">Menú</button>
         </div>
         <div class="header-right">
-            <span>Tiempo restante: <span id="timer">00:30</span></span>
+            <span>Tiempo restante: <span id="timer">00:00</span></span>
         </div>
     </header>
 
@@ -24,30 +24,32 @@
 
         <div class="question-container">
             <div class="question">
-                <p>1. ¿Cuál es uno de los valores éticos fundamentales en la institución?</p>
+                <p>1. ¿Según el Código de Ética de la Carrera de Ingeniería en Sistemas, la misión institucional incluye:</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question1" value="honestidad"> Honorabilidad</label>
-                    <label><input type="radio" name="question1" value="irrespeto"> Competencia</label>
-                    <label><input type="radio" name="question1" value="negligencia"> Desinterés</label>
-                    <label><input type="radio" name="question1" value="irrespeto"> Ambición</label>
+                    <label><input type="radio" name="question1" value="honestidad"> Promover la educación superior para el desarrollo social y económico</label>
+                    <label><input type="radio" name="question1" value="irrespeto"> Formar exclusivamente profesionales en el campo de la ingeniería</label>
+                    <label><input type="radio" name="question1" value="negligencia"> Limitar el acceso a personas con altos puntajes académicos</label>
+                    <label><input type="radio" name="question1" value="negligencia"> Prohibir el uso de tecnologías avanzadas en el aula</label>
                 </div>
             </div>
 
             <div class="question">
-                <p>2. ¿Qué valor fomenta la igualdad de derechos y obligaciones?</p>
+                <p>2. ¿Cuál de los siguientes NO es un valor institucional mencionado en el Código de Ética?</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question2" value="justicia"> Justicia</label>
-                    <label><input type="radio" name="question2" value="engaño"> Engaño</label>
-                    <label><input type="radio" name="question2" value="egoismo"> Egoísmo</label>
+                    <label><input type="radio" name="question2" value="justicia"> Honestidad</label>
+                    <label><input type="radio" name="question2" value="engaño">  Solidaridad</label>
+                    <label><input type="radio" name="question2" value="egoismo"> Respeto</label>
+                    <label><input type="radio" name="question2" value="egoismo"> Justicia</label>
                 </div>
             </div>
 
             <div class="question">
-                <p>3. ¿Cuál es una muestra de integridad en el trabajo?</p>
+                <p>3. En cuanto a la ética en la actividad académica, se establece que el docente debe:</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question3" value="confianza"> Generar confianza</label>
-                    <label><input type="radio" name="question3" value="mentira"> Mentir</label>
-                    <label><input type="radio" name="question3" value="deshonestidad"> Deshonestidad</label>
+                    <label><input type="radio" name="question3" value="confianza"> Fomentar la preferencia por estudiantes destacados</label>
+                    <label><input type="radio" name="question3" value="mentira"> Promover la enseñanza basada en normas morales y principios pedagógicos</label>
+                    <label><input type="radio" name="question3" value="deshonestidad"> Permitir únicamente que estudiantes avanzados participen en clase</label>
+                    <label><input type="radio" name="question3" value="deshonestidad"> Fomentar la competencia y el individualismo en el aula</label>
                 </div>
             </div>
         </div>
