--- a/VoF.html
+++ b/VoF.html
@@ -10,33 +10,28 @@
     <header>
         <div class="header-left">Ética Profesional</div>
         <button class="menu-btn" onclick="window.location.href='index.html'">Menú</button>
-        <div class="header-right" id="timer">00:30</div>
+        <div class="header-right" id="timer">00:00</div>
     </header>
     <main>
         <h2>Ejercicio de Verdadero o Falso</h2>
         <div class="statement-container">
             <div class="statement">
-                <p>1. La ética profesional implica que los ingenieros de software deben priorizar el beneficio económico sobre la seguridad de los usuarios.</p>
+                <p>1. La ética profesional es fundamental para generar confianza en el entorno laboral.</p>
                 <button class="option" onclick="selectAnswer(this, 'true')">Verdadero</button>
                 <button class="option" onclick="selectAnswer(this, 'false')">Falso</button>
             </div>
             <div class="statement">
-                <p>2. El código ético establece que los ingenieros deben ser honestos y transparentes en la comunicación de problemas técnicos que afecten la seguridad.</p>
+                <p>2. La justicia en el ámbito laboral significa favorecer a un grupo sobre otro.</p>
                 <button class="option" onclick="selectAnswer(this, 'true')">Verdadero</button>
                 <button class="option" onclick="selectAnswer(this, 'false')">Falso</button>
             </div>
             <div class="statement">
-                <p>3. En el caso de Safe Skies, Wayne Davidson opta por aprobar el sistema con un error para evitar retrasos en la entrega.</p>
+                <p>3. La honestidad en el trabajo se refleja en la transparencia y sinceridad en las acciones.</p>
                 <button class="option" onclick="selectAnswer(this, 'true')">Verdadero</button>
                 <button class="option" onclick="selectAnswer(this, 'false')">Falso</button>
             </div>
             <div class="statement">
-                <p>4. Un ingeniero de software puede justificar el uso de software sin licencia si el cliente es importante para la empresa.</p>
-                <button class="option" onclick="selectAnswer(this, 'true')">Verdadero</button>
-                <button class="option" onclick="selectAnswer(this, 'false')">Falso</button>
-            </div>
-            <div class="statement">
-                <p>5. El objetivo principal del código ético es proteger la integridad de los profesionales y la seguridad del público.</p>
+                <p>4. La ética profesional solo es relevante para ciertos puestos laborales.</p>
                 <button class="option" onclick="selectAnswer(this, 'true')">Verdadero</button>
                 <button class="option" onclick="selectAnswer(this, 'false')">Falso</button>
             </div>
