--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <div class="header-left">Ética Profesional</div>
         <div class="header-right">
-            <button class="menu-btn" onclick="window.location.href='Etica.html'">Análisis de Ética</button>
-            <button class="menu-btn" onclick="window.location.href='Politica.html'">Conducta Política</button>
+            <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/HTML/analisis_etica.html'">Análisis de Ética</button>
+            <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/HTML/conducta_politica.html'">Conducta Política</button>
         </div>
     </header>
     <main>
@@ -21,10 +21,8 @@
                 <img src="1.png" alt="Ejercicio 1">
                 <p>Ejercicio de Arrastrar Palabras</p>
             </div>
-            <div class="exercise" onclick="window.location.href='Crucigrama.html'">
-                <img src="2.png" alt="Ejercicio 2">
-                <p>Ejercicio de Crucigrama</p>
-            </div>
+            
+           
             <div class="exercise" onclick="window.location.href='Multiple.html'">
                 <img src="3.png" alt="Ejercicio 3">
                 <p>Ejercicio de Selección Multiple</p>
