--- a/Multiple.html
+++ b/Multiple.html
@@ -26,30 +26,30 @@
             <div class="question">
                 <p>1. ¿Según el Código de Ética de la Carrera de Ingeniería en Sistemas, la misión institucional incluye:</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question1" value="honestidad"> Promover la educación superior para el desarrollo social y económico</label>
-                    <label><input type="radio" name="question1" value="irrespeto"> Formar exclusivamente profesionales en el campo de la ingeniería</label>
-                    <label><input type="radio" name="question1" value="negligencia"> Limitar el acceso a personas con altos puntajes académicos</label>
-                    <label><input type="radio" name="question1" value="negligencia"> Prohibir el uso de tecnologías avanzadas en el aula</label>
+                    <label><input type="radio" name="question1" value="A"> Promover la educación superior para el desarrollo social y económico</label>
+                    <label><input type="radio" name="question1" value="B"> Formar exclusivamente profesionales en el campo de la ingeniería</label>
+                    <label><input type="radio" name="question1" value="C"> Limitar el acceso a personas con altos puntajes académicos</label>
+                    <label><input type="radio" name="question1" value="D"> Prohibir el uso de tecnologías avanzadas en el aula</label>
                 </div>
             </div>
 
             <div class="question">
                 <p>2. ¿Cuál de los siguientes NO es un valor institucional mencionado en el Código de Ética?</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question2" value="justicia"> Honestidad</label>
-                    <label><input type="radio" name="question2" value="engaño">  Solidaridad</label>
-                    <label><input type="radio" name="question2" value="egoismo"> Respeto</label>
-                    <label><input type="radio" name="question2" value="egoismo"> Justicia</label>
+                    <label><input type="radio" name="question2" value="A"> Honestidad</label>
+                    <label><input type="radio" name="question2" value="B">  Solidaridad</label>
+                    <label><input type="radio" name="question2" value="C"> Respeto</label>
+                    <label><input type="radio" name="question2" value="D"> Justicia</label>
                 </div>
             </div>
 
             <div class="question">
                 <p>3. En cuanto a la ética en la actividad académica, se establece que el docente debe:</p>
                 <div class="option-group">
-                    <label><input type="radio" name="question3" value="confianza"> Fomentar la preferencia por estudiantes destacados</label>
-                    <label><input type="radio" name="question3" value="mentira"> Promover la enseñanza basada en normas morales y principios pedagógicos</label>
-                    <label><input type="radio" name="question3" value="deshonestidad"> Permitir únicamente que estudiantes avanzados participen en clase</label>
-                    <label><input type="radio" name="question3" value="deshonestidad"> Fomentar la competencia y el individualismo en el aula</label>
+                    <label><input type="radio" name="question3" value="A"> Fomentar la preferencia por estudiantes destacados</label>
+                    <label><input type="radio" name="question3" value="B"> Promover la enseñanza basada en normas morales y principios pedagógicos</label>
+                    <label><input type="radio" name="question3" value="C"> Permitir únicamente que estudiantes avanzados participen en clase</label>
+                    <label><input type="radio" name="question3" value="D"> Fomentar la competencia y el individualismo en el aula</label>
                 </div>
             </div>
         </div>
