--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <div class="header-left">Ética Profesional</div>
         <div class="header-right">
-            <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/HTML/analisis_etica.html'">Ética</button>
-            <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/HTML/conducta_politica.html'">Conducta</button>
+            <button class="menu-btn" onclick="window.location.href='analisis_etica.html'">Ética</button>
+            <button class="menu-btn" onclick="window.location.href='conducta_politica.html'">Conducta</button>
         </div>
     </header>
     <main>
