--- a/analisis_etica.html
+++ b/analisis_etica.html
@@ -36,11 +36,11 @@
 <body>
     <header>
         <div class="header-left">Ética Profesional</div>
-        <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/index.html'">Menú</button>
+        <button class="menu-btn" onclick="window.location.href='index.html'">Menú</button>
         
     </header>
     <div class="pdf-container">
-        <iframe src="/Ética Profesional - Pagina/HTML/Codigo-de-Etica-Ingeneria-en-Sistemas.pdf" title="Visualizador de PDF"></iframe>
+        <iframe src="Codigo-de-Etica-Ingeneria-en-Sistemas.pdf" title="Visualizador de PDF"></iframe>
     </div>
 </body>
 </html>
