--- a/conducta_politica.html
+++ b/conducta_politica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visor de PDF</title>
-    <link rel="stylesheet" href="/Ética Profesional - Pagina/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             display: flex;
@@ -36,11 +36,11 @@
 <body>
     <header>
         <div class="header-left">Ética Profesional</div>
-        <button class="menu-btn" onclick="window.location.href='/Ética Profesional - Pagina/index.html'">Menú</button>
+        <button class="menu-btn" onclick="window.location.href='index.html'">Menú</button>
         
     </header>
     <div class="pdf-container">
-        <iframe src="/Ética Profesional - Pagina/HTML/Normas.pdf" title="Visualizador de PDF"></iframe>
+        <iframe src="Normas.pdf" title="Visualizador de PDF"></iframe>
     </div>
 </body>
 </html>
